4.x/apps/Calculator-Spring-Boot/basic-op-add/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: add
  name: add
  namespace: <PROJECT>
spec:
  host: <DOMAIN>
  path: /basicop/add
  port:
    targetPort: 8001
  to:
    kind: Service
    name: basic-op-add
    weight: 100
  wildcardPolicy: None
